# lumo

./: .gitignore  Cargo.toml  LICENSE  README.md  readme.md
.github/workflows/: ci.yml  coverage.yml  unit-test.yml
benches/: triangle_intersect.rs
docs/: index.html  search-index.js  source-files.js
docs/implementors/argh/: trait.FromArgs.js
docs/rust_tracer/: all.html  constant.FNAME.html  constant.FOV.html  constant.HEIGHT.html  constant.NUM_SAMPLES.html  constant.WIDTH.html  fn.main.html  index.html  sidebar-items.js  struct.TracerCli.html
docs/rust_tracer/consts/: constant.CHECKER_SCALE.html  constant.EPSILON.html  constant.LOBE_Q.html  (+11 more)
examples/: .gitignore  bistro.rs  box.rs  bunny.rs  caustics.rs  circle.rs  conference.rs  cornell.rs  def.rs  dof.rs  dragon.rs  fireplace.rs  hello_sphere.rs  homer.rs  main.rs  medium.rs  nefertiti.rs  obj.rs  spheres.rs  teapot.rs
src/: camera.rs  cli.rs  complex.rs  consts.rs  efloat.rs  formatting.rs  image.rs  lib.rs  main.rs  math.rs  obj.rs  onb.rs  parser.rs  pdfs.rs  perlin.rs  pool.rs  rand_utils.rs  renderer.rs  rng.rs  samplers.rs  scene.rs  simpson_integration.rs  spherical_utils.rs  tone_mapping.rs  tracer.rs
src/complex/: complex_tests.rs
src/math/: chi2.rs  complex.rs  mat3.rs  mat4.rs  simpson_integration.rs  transform.rs  vec2.rs  vec3.rs
src/parser/: mtl.rs  obj.rs
src/pool/: worker.rs
src/renderer/: pool.rs  queue.rs  result.rs  task.rs  worker.rs
src/rng/: maps.rs
src/samplers/: sobol_seq.rs
src/scene/: box_scene.rs  default_scene.rs  empty_box.rs  obj_scene.rs  scene_tests.rs
src/spherical_utils/: spherical_utils_tests.rs
src/tracer/: brdfs.rs  bsdf.rs  bxdf.rs  bxdfs.rs  camera.rs  color.rs  film.rs  filter.rs  hit.rs  illumination.rs  integrator.rs  integrators.rs  material.rs  medium.rs  microfacet.rs  microfacet_distributions.rs  object.rs  onb.rs  pdfs.rs  phong.rs  ray.rs  scattering.rs  scene.rs  sphere.rs  texture.rs
(+230 files in other folders)
