[package]
name = "lumo"
version = "0.5.3"
description = "CPU based rendering engine"
license = "MIT"
rust-version = "1.82"
repository = "https://git.karppinen.xyz/lumo"
authors = ["ekarpp <eetu@karppinen.xyz>"]
keywords = ["rendering", "path-tracing", "graphics", "3D", "ray-tracing"]
categories = ["graphics", "rendering::engine", "multimedia::images"]
edition = "2021"

[dependencies]
curl = "0.4.47"
itertools = "0.10.5"
libm = "0.2.11"
png = "0.17.7"
rustc-hash = "2.1.1"
zip = "0.6.4"
